# image-vips

./: .gitignore  ChangeLog.md  LICENSE  README.md  image-vips.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: HIP.hs  VipsImage.hs
