name:           image-vips
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/Lupino/image-vips#readme>
homepage:       https://github.com/Lupino/image-vips#readme
bug-reports:    https://github.com/Lupino/image-vips/issues
author:         Li Meng Jun
maintainer:     lmjubuntu@gmail.com
copyright:      MIT
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/Lupino/image-vips

library
  hs-source-dirs: src
  pkgconfig-depends: vips
  build-depends:
      base >=4.7 && <5
    , bytestring
    , inline-c
    , vector
  exposed-modules:
      VipsImage
  default-language: Haskell2010

executable image-vips
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall
  cc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , bytestring
    , data-default-class
    , directory
    , filepath
    , http-types
    , image-vips
    , mime-types
    , optparse-applicative
    , scotty
    , streaming-commons
    , text
    , wai
    , warp
  default-language: Haskell2010
